[tool.poetry]
name = "moekani-2"
version = "0.1.0"
description = ""
authors = ["lubbly-jubbly <libby.rear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
genanki = "^0.13.1"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
